--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@ under the License.
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.lanysec.StreamingJob</mainClass>
+                                    <mainClass>com.lanysec.services.AssetSessionVisitFlow</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
